2023-04-10
    In the GD example programs use the gdImageSX and gdImageSY funtions to
    get the image dimensions.
2023-04-11
    The MGRX example programs are using the new multi-polygon functions in
    MGRX v1.4.3 if available, so paths with multiple subpaths are filled at
    once like it must be.
2023-04-03
    Updated docs to v0.80
2023-04-03
    The MGRX test programs showsvg and svg2png call MsvgNormalizeRawGradients
    before render.
    Added some gradient examples to svgpic subdir.
2023-04-01
    The MGRX test programs can render now gradients.
2023-04-01
    Added genbps parameter to MsvgSerCookedTree to generate binary paint servers
    when possible. MsvgTransformCookedElement adjust binary paint servers units
    if they are present.
2023-03-31
    Modified gd and mgrx makefiles to use the include and library files in the src
    subdirectory, so it isn't necesary to install the lib previosly.
2023-03-31
    New MsvgBPServer structure to store a binary representation of a linear or radial
    gradient. Added fill_bps and stroke_bps members to the MsvgPaintCtx struct to
    store pointers to binary paint servers for fill and stroke operations.
    New functions:
        MsvgBPServer *MsvgNewBPServer(MsvgElement *el);
        creates a binary paint server from an EID_LINEARGRADIENT or EID_RADIALGRADIENT
        cooked element and their EID_STOP children.
        void MsvgDestroyBPServer(MsvgBPServer *bps);
        destroys a binary paint server.
        int MsvgCalcUnitsBPServer(MsvgBPServer *bps, MsvgBox *bbox, TMatrix *);
        transforms coordinates of a binary paint server, first if the gradient units
        are GRADUNIT_BBOX and a bbox is provided transform the units to GRADUNIT_USER,
        after that if the t matrix is not NULL the transformation is applied.
    Solved bug cooking EID_LINEARGRADIENT and EID_RADIALGRADIENT when cheking for
    gradient units.
    Solved bug calculating ellipse bounding box.